// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-radius: 0;
  border-width: 0;
  margin: 0;
  padding: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
}

<div
  className="sc-AxjAm c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with maxWidth 1`] = `
.c0 {
  border-radius: 0;
  border-width: 0;
  margin: 0;
  padding: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 50%;
}

<div
  className="sc-AxjAm c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
